css/style.css
body {
	background: #f3f3f3;
}

.provincely li {
	color:#900;
}

.container {
	margin: 40px auto;
	width: 640px;
	font-family: 'Crimson Text', Georgia, serif;
}

hr {
	border-top: solid 1px #777;
	margin: 2em 0;
}

h1 {
	color: #666;
	font-weight: normal;
	font-size: 60px;
	text-align: center;
	line-height: 40px;
}

h2 {
	font-weight: normal;
	font-style: italic;
	text-align: center;
	color: #88d;
}

#download {
	text-align: center;
}

#download a {
	font-size: 2em;
	padding: 12px;
	margin: 12px;
	background: #88d;
	text-decoration: none;
	border-radius: 4px;
	color: #444;
}

#download a:hover {
	background: #900;
	color: #fff;
}

